# mcp-comfyui

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  server.py  setup.py  setup_comfyui.md
examples/: brand_guidelines.md  generate_crisis_corps_logos.py
mcp_comfyui/: __init__.py  __main__.py  comfyui_client.py  server.py  utils.py
tests/: test_server.py
workflows/: README.md  crisis_corps_logo.json  logo_generator.json  robot_emblem.json  text_logo_variations.json
